--- a/references.bib
+++ b/references.bib
@@ -2560,3 +2560,35 @@
   year={2014},
   publisher={Pearson Education}
 }
+
+@article{dastani2002,
+  title={The role of visual perception in data visualization},
+  author={Dastani, Mehdi},
+  journal={Journal of Visual Languages \& Computing},
+  volume={13},
+  number={6},
+  pages={601--622},
+  year={2002},
+  publisher={Elsevier}
+}
+
+@article{vickers2012,
+  title={Understanding visualization: A formal approach using category theory and semiotics},
+  author={Vickers, Paul and Faith, Joe and Rossiter, Nick},
+  journal={IEEE transactions on visualization and computer graphics},
+  volume={19},
+  number={6},
+  pages={1048--1061},
+  year={2012},
+  publisher={IEEE}
+}
+
+@misc{rentzsch2005,
+  author = {Rentzsch, Jonathan},
+	title = {Data alignment: Straighten up and fly right},
+	journal = {IBM Developer},
+	year = {2005},
+	month = feb,
+	note = {[Online; accessed 24. Nov. 2024]},
+	url = {https://developer.ibm.com/articles/pa-dalign}
+}
